# iiwa_kuka_kinematics

./: .gitignore  CMakeLists.txt  README.md  joints.txt  joints1.txt  main.cpp  visual.py  visual1.py
facade/: main_kinematic.cpp  main_kinematic.hpp
for_tests/: CMakeLists.txt  test.cpp
kinematic_class/: base_kinematic.cpp  base_kinematic.hpp  kinematic.cpp  kinematic.hpp
kinematic_class/Drake/: Drake_kinematic.cpp  Drake_kinematic.hpp
kinematic_class/KDL/: KDL_kinematic.cpp  KDL_kinematic.hpp
kinematic_class/Pinocchio/: Pinocchio_kinematic.cpp  Pinocchio_kinematic.hpp
kinematic_class/SNS/: SNS_kinematic.cpp  SNS_kinematic.hpp  temp.cpp
lib/: libarmadillo.so.14.0.2
lib/sns/: fosns_velocity_ik.cpp  fosns_velocity_ik.hpp  fsns_velocity_ik.cpp  fsns_velocity_ik.hpp  osns_sm_velocity_ik.cpp  osns_sm_velocity_ik.hpp  osns_velocity_ik.cpp  osns_velocity_ik.hpp  sns_acc_ik_base.cpp  sns_ik.cpp  sns_ik.hpp  sns_ik_base.cpp  sns_ik_math_utils.cpp  sns_position_ik.cpp  sns_position_ik.hpp  sns_vel_ik_base.cpp  sns_vel_ik_base_interface.cpp  sns_vel_ik_base_interface.hpp  sns_velocity_ik.cpp  sns_velocity_ik.hpp
robots/: iiwa.urdf
usable_functions/: usable_functions.cpp  usable_functions.hpp
